@@ -120,14 +120,12 @@
       <Name>System.XML</Name>
     </Reference>
     <ProjectReference Include="..\Castle.MonoRail.ActiveRecordScaffold\Castle.MonoRail.ActiveRecordScaffold-vs2005.csproj">
-      <Name>Castle.MonoRail.ActiveRecordScaffold-vs2005</Name>
       <Project>{8C6EA891-66AF-4F48-A2CB-98669D5E7AA9}</Project>
-      <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
+      <Name>Castle.MonoRail.ActiveRecordScaffold-vs2005</Name>
     </ProjectReference>
     <ProjectReference Include="..\Castle.MonoRail.ActiveRecordSupport\Castle.MonoRail.ActiveRecordSupport-vs2005.csproj">
-      <Name>Castle.MonoRail.ActiveRecordSupport-vs2005</Name>
       <Project>{2409063E-BE05-4596-A677-758096D1C759}</Project>
-      <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
+      <Name>Castle.MonoRail.ActiveRecordSupport-vs2005</Name>
     </ProjectReference>
     <ProjectReference Include="..\Castle.MonoRail.Framework\Castle.MonoRail.Framework-vs2005.csproj">
       <Name>Castle.MonoRail.Framework-vs2005</Name>
@@ -136,9 +134,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Controllers\AccountController.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -162,10 +157,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Controllers\ProductLicenseController.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="global.asax.cs">
-      <DependentUpon>global.asax</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Model\Account.cs">
@@ -194,12 +185,10 @@
     <Compile Include="Model\SimplePerson.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MyHttpApplication.cs" />
     <Content Include="css\style.css" />
     <Content Include="global.asax" />
     <Content Include="Views\home\index.vm" />
-    <EmbeddedResource Include="global.asax.resx">
-      <DependentUpon>global.asax.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Views\blogs\newBlog.vm.old" />
     <None Include="Views\layouts\scaffold.vm" />
     <None Include="Views\rescues\DataBinderValidateBadData.vm" />
